assets/kaniko-build.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
