assets/chess-bot-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: capture-original-path
  namespace: chess-bot
spec:
  replacePathRegex:
    regex: "^/(.*)"
    replacement: "/$1"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chess-bot-ingress-route
  namespace: chess-bot
spec:
  entryPoints:
    - websecure
  tls:
    secretName: chess-bot-tls
  routes:
    - kind: Rule
      match: Host("chess-bot.k3s.cluster.local")
      middlewares:
        - name: capture-original-path
          namespace: chess-bot
      services:
        - name: chess-bot-service
          kind: TraefikService
