assets/docker-registry-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: capture-original-path
  namespace: docker-registry
spec:
  replacePathRegex:
    regex: "^/(.*)"
    replacement: "/$1"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-ingress-route
  namespace: docker-registry
spec:
  entryPoints:
    - websecure
  tls:
    secretName: docker-registry-tls
  routes:
    - kind: Rule
      match: Host("docker-registry.k3s.cluster.local")
      middlewares:
        - name: capture-original-path
          namespace: docker-registry
      services:
        - name: docker-registry-service
          kind: TraefikService
