assets/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: capture-original-path
  namespace: monitoring
spec:
  replacePathRegex:
    regex: "^/(.*)"
    replacement: "/$1"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-tls
  routes:
    - kind: Rule
      match: Host("grafana.k3s.cluster.local")
      middlewares:
        - name: capture-original-path
          namespace: monitoring
      services:
        - name: grafana-service
          kind: TraefikService
