assets/kubernetes-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: capture-original-path
  namespace: kubernetes-dashboard
spec:
  replacePathRegex:
    regex: "^/(.*)"
    replacement: "/$1"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress-route
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  tls:
    secretName: kubernetes-dashboard-tls
  routes:
    - kind: Rule
      match: Host("kubernetes-dashboard.k3s.cluster.local")
      middlewares:
        - name: capture-original-path
          namespace: kubernetes-dashboard
      services:
        - name: kubernetes-dashboard-service
          kind: TraefikService
